trying to fix weird code>home contact overlap.
solution not ideal.

--- a/protected/styles/p.css
+++ b/protected/styles/p.css
@@ -16,7 +16,7 @@ body{width:100%;height:100%;font-size:1em;padding: 15px 15px;box-sizing: border-
   body>div#content{position: absolute; top:175px;padding: 0 15px;width: 96%;box-sizing: border-box;overflow:hidden;background: #f5f5f5;border-radius: 8px;}
     body>div#content h3{margin: 8px 0 0 8px;}
 /*home page stuff*/
-    body#home>div#content>p{display: block;width: 100%;padding: 5px 5px 5px 270px;box-sizing: border-box;}
+    body#home>div#content>p{display: block;width: 100%;padding: 5px 5px 5px 280px;box-sizing: border-box;}
       body#home>div#content>p>img{display:block;clear:both;max-width: 100%;padding: 5px 5px 5px 0;box-sizing: border-box;}
     body#home>div#content>dl#contact{margin:5px 0 0 5px;font-size:30px;height:5.5em;width:45%;box-sizing: border-box;position: absolute;}
       body#home>div#content>dl#contact *{transition-property:color, background;transition-duration:.25s,.25s;transition-timing-function:ease-in-out,ease-in-out;}
